--- a/about.html
+++ b/about.html
@@ -55,12 +55,12 @@
             <div class="container-lg">
                 <div class="l-header__inner">
                     <!-- <a class="l-header__logo" href="/index.html">
-                <img src="/images/header/header_logo.svg" height="48" alt="">
+                <img src="./images/header/header_logo.svg" height="48" alt="">
             </a> -->
                     <nav class="c-nav">
                         <input id="c-nav__menu" class="c-nav__menu--ipt" type="radio" name="nav">
                         <a class="c-nav__logo" href="/index.html">
-                            <img src="/images/header/header_logo.svg" height="48" alt="">
+                            <img src="./images/header/header_logo.svg" height="48" alt="">
                         </a>
                         <label class="c-nav__menu--lab" for="c-nav__menu">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -156,7 +156,7 @@
                             <ul class="l-teams__list">
                                 <li>
                                     <div class="l-teams__list--items">
-                                        <img class="l-teams__list--photo" src="/images/about/img_teams_01.png" alt="">
+                                        <img class="l-teams__list--photo" src="./images/about/img_teams_01.png" alt="">
                                         <div class="l-teams__list--info">
                                             <h3 class="l-teams__list--name">黃柏齊</h3>
                                             <h4 class="l-teams__list--en">Alvin Huang</h4>
@@ -166,7 +166,7 @@
                                 </li>
                                 <li>
                                     <div class="l-teams__list--items">
-                                        <img class="l-teams__list--photo" src="/images/about/img_teams_02.png" alt="">
+                                        <img class="l-teams__list--photo" src="./images/about/img_teams_02.png" alt="">
                                         <div class="l-teams__list--info">
                                             <h3 class="l-teams__list--name">葉受尊</h3>
                                             <h4 class="l-teams__list--en">Eric Yeh</h4>
@@ -176,7 +176,7 @@
                                 </li>
                                 <li>
                                     <div class="l-teams__list--items">
-                                        <img class="l-teams__list--photo" src="/images/about/img_teams_03.png" alt="">
+                                        <img class="l-teams__list--photo" src="./images/about/img_teams_03.png" alt="">
                                         <div class="l-teams__list--info">
                                             <h3 class="l-teams__list--name">許毓展</h3>
                                             <h4 class="l-teams__list--en">Jason Hsu</h4>
