--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
             <div class="container-lg">
                 <div class="l-header__inner">
                     <!-- <a class="l-header__logo" href="/index.html">
-                <img src="/images/header/header_logo.svg" height="48" alt="">
+                <img src="./images/header/header_logo.svg" height="48" alt="">
             </a> -->
                     <nav class="c-nav">
                         <input id="c-nav__menu" class="c-nav__menu--ipt" type="radio" name="nav">
                         <a class="c-nav__logo" href="/index.html">
-                            <img src="/images/header/header_logo.svg" height="48" alt="">
+                            <img src="./images/header/header_logo.svg" height="48" alt="">
                         </a>
                         <label class="c-nav__menu--lab" for="c-nav__menu">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -121,7 +121,7 @@
                                 <button id="btn-enterprise" class="c-btn c-btn--primary" type="button">我是企業</button>
                                 <button id="btn-npo" class="c-btn c-btn--primary" type="button">我是社團法人</button>
                             </div>
-                            <img class="l-create__banner" src="/images/index/img_create_banner.png" alt="">
+                            <img class="l-create__banner" src="./images/index/img_create_banner.png" alt="">
                         </div>
                     </div>
                 </section>
@@ -392,7 +392,7 @@
                             <h2 id="product-section" class="l-product__title">主要產品與服務</h2>
                             <div class="l-product__inner">
                                 <div class="l-product__card">
-                                    <img class="l-product__card--banner" src="/images/index/img_product_banner_01.png"
+                                    <img class="l-product__card--banner" src="./images/index/img_product_banner_01.png"
                                         alt="">
                                     <div class="l-product__info">
                                         <h2 class="l-product__info--title">企業公益網</h2>
@@ -409,7 +409,7 @@
                                     </div>
                                 </div>
                                 <div class="l-product__card">
-                                    <img class="l-product__card--banner" src="/images/index/img_product_banner_02.png"
+                                    <img class="l-product__card--banner" src="./images/index/img_product_banner_02.png"
                                         alt="">
                                     <div class="l-product__info">
                                         <h2 class="l-product__info--title">Jooin 永續護照</h2>
@@ -435,7 +435,7 @@
                     <div class="container">
                         <div class="l-consultant">
                             <div class="l-consultant__inner">
-                                <img class="l-consultant__photo" src="/images/index/img_consultant_banner.png" alt="">
+                                <img class="l-consultant__photo" src="./images/index/img_consultant_banner.png" alt="">
                                 <div class="l-consultant__info">
                                     <h2 class="l-consultant__info--title">永續顧問服務</h2>
                                     <h3 class="l-consultant__info--sub">協助企業面對永續議題時最專業的幫手</h3>
@@ -471,23 +471,23 @@
                                     <div class="swiper js-slider">
                                         <ul class="l-slider__list swiper-wrapper">
                                             <li class="swiper-slide"><img class="l-consultant__photo"
-                                                    src="/images/index/img_enterprise_logo_01.jpg" alt=""></li>
+                                                    src="./images/index/img_enterprise_logo_01.jpg" alt=""></li>
                                             <li class="swiper-slide"><img class="l-consultant__photo"
-                                                    src="/images/index/img_enterprise_logo_02.jpg" alt=""></li>
+                                                    src="./images/index/img_enterprise_logo_02.jpg" alt=""></li>
                                             <li class="swiper-slide"><img class="l-consultant__photo"
-                                                    src="/images/index/img_enterprise_logo_03.jpg" alt=""></li>
+                                                    src="./images/index/img_enterprise_logo_03.jpg" alt=""></li>
                                             <li class="swiper-slide"><img class="l-consultant__photo"
-                                                    src="/images/index/img_enterprise_logo_04.jpg" alt=""></li>
+                                                    src="./images/index/img_enterprise_logo_04.jpg" alt=""></li>
                                             <li class="swiper-slide"><img class="l-consultant__photo"
-                                                    src="/images/index/img_enterprise_logo_05.jpg" alt=""></li>
+                                                    src="./images/index/img_enterprise_logo_05.jpg" alt=""></li>
                                             <li class="swiper-slide"><img class="l-consultant__photo"
-                                                    src="/images/index/img_enterprise_logo_06.jpg" alt=""></li>
+                                                    src="./images/index/img_enterprise_logo_06.jpg" alt=""></li>
                                             <li class="swiper-slide"><img class="l-consultant__photo"
-                                                    src="/images/index/img_enterprise_logo_07.jpg" alt=""></li>
+                                                    src="./images/index/img_enterprise_logo_07.jpg" alt=""></li>
                                             <li class="swiper-slide"><img class="l-consultant__photo"
-                                                    src="/images/index/img_enterprise_logo_08.jpg" alt=""></li>
+                                                    src="./images/index/img_enterprise_logo_08.jpg" alt=""></li>
                                             <li class="swiper-slide"><img class="l-consultant__photo"
-                                                    src="/images/index/img_enterprise_logo_09.jpg" alt=""></li>
+                                                    src="./images/index/img_enterprise_logo_09.jpg" alt=""></li>
                                         </ul>
                                         <div class="swiper-button-prev"></div>
                                         <div class="swiper-button-next"></div>
